[package]
name = "gitc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-macros = { version = "2.3.0" }
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
json = "0.12.4"
anyhow = "1.0.86"
